# python-starter-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
python_starter_template/: hello_world.py
