[tool.poetry]
name = "python-starter-template"
version = "0.1.0"
description = ""
authors = ["Meron Nagy <nagy.meron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pyright = "^1.1.384"
pylint = "^3.3.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
