[tool.poetry]
name = "python-starter-template"
version = "0.1.0"
description = ""
authors = ["Meron Nagy <nagy.meron@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
mypy = "^1.11.2"

[tool.black]
line-length = 88
target-version = ['py39']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
